--- a/index.html
+++ b/index.html
@@ -3,97 +3,142 @@
   <head>
     <meta charset="utf-8">
     <title>Sharon Choi | UX UI Designer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul class="nav">
-          <li><img src="images/homepage/final-logo-sc.svg" alt="Sharon-logo" height="86" width="147"></li>
-          <li>Work</li>
-          <li>Resume</li>
-          <li>About</li>
-          <li><a href = "mailto:sharonchoi.design@gmail.com">Contact</a></li>
+    <div class="container">
+
+      <!-- Menu Overlay -->
+      <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+          <a href="#project-section" onclick="closeNav()">Work</a>
+          <a href="#" onclick="closeNav()">Resume</a>
+          <a href="#" onclick="closeNav()">About</a>
+          <a href="mailto:sharonchoi.design@gmail.com" onclick="closeNav()">Contact</a>
+        </div>
+      </div>
+
+      <!-- javascript for menu icon -->
+      <script>
+      function openNav() {
+          document.getElementById("myNav").style.display = "block";
+      }
+      function closeNav() {
+          document.getElementById("myNav").style.display = "none";
+      }
+      </script>
+
+      <!-- Navbar Section-->
+      <nav class="navbar">
+        <ul class="topnav" id="myTopnav">
+          <li class="logo"><a href="index.html"><img src="images/homepage/final-logo-sc.svg" alt="Sharon-logo"></a></li>
+          <li class="nav"><a href="#project-section">Work</a></li>
+          <li class="nav"><a href="#">Resume</a></li>
+          <li class="nav"><a href="#">About</a></li>
+          <li class="nav"><a href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
+          <li class="menu"><span style="font-size:3.6rem;cursor:pointer" onclick="openNav()"><i class="fas fa-bars"></i></span></li>
         </ul>
       </nav>
-      <section>
-        <h1>Hi! I'm Sharon Choi,</h1>
-        <p>a UX/UI designer based in the San Francisco Bay Area</p>
-        <p>I create delightful user experience through beautiful, simple, yet thoughtful interface designs.</p>
+
+      <!--Hero Section-->
+      <section class="hero">
+        <h1>Hi! I'm <span id="name">Sharon Choi,</span></h1>
+        <h2>a UX/UI designer based in the San Francisco Bay Area</h2>
+        <h3>I create <span class="green-text">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
       </section>
-    </header>
-    <main>
-      <div id="title-project">
-        <p>See featured project<img src="images/homepage/dot-arrow.svg" alt="arrow" height="43" width="77"></p>
-      </div>
-      <div class="project">
-        <img src="images/homepage/seamhub-display.png" alt="seamhub" height="577" width="992">
-        <div class="overlay">
-          <div class="overlay-text">
+
+      <!--Project Section-->
+      <section class="project">
+        <div class="project-cta">
+          <a class="link" id="project-cta-text" href="#project-section">See featured project<object id="project-cta-icon" type="image/svg+xml" data="images/homepage/dot-arrow.svg"></object></a>
+        </div>
+        <div id="project-section">
+          <img class="project-screen"src="images/homepage/seamhub-display.png" alt=display>
+          <div class="project-display">
+            <div class="project-bkg-image"></div>
+            <div class="project-info">
               <h2>Seamhub</h2>
-              <p>Responsive Web Design  |  UX & UI Design  |  Brand Identity</p>
-              <a href="project.html">View case study</a>
-              <p>Seamhub allows users to manage their digital assets in both a personal and professional setting seamlessly.</p>
+              <p class="subtitle">Responsive Web Design  |<br>  UX & UI Design  |  Brand Identity</p>
+                <div class="button" id="btn-case-study">
+                  <a href="project.html">View case study</a>
+                </div>
+              <p class="body-text">Seamhub allows users to manage their digital assets in both a personal and professional setting seamlessly.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="brief-intro">
-        <p>As a designer with a background in the customer-facing industry, I embrace a people-oriented mindset and deeply aware of the importance of being empathetic. My goal is to offer engaging and friendly design to users.</p>
-        <a>Learn more about me <i class="fas fa-caret-right"></i></a>
-      </div>
-      <section>
-        <div class="UX-Design">
-          <h4>UX Design Process</h4>
-          <p>I begin my design projects by defining and scoping the presented problem, get to know my users though interview and survey, then strategically map out solutions through series of user flows, wireframes and prototypes. I test the usability of my designs to ensure a delightful user experience. </p>
-          <img src="images/homepage/lofi-wireframe.png" alt="Hand-drawn wireframe" height="402" width="402">
+      </section>
+
+      <!--Intro Section-->
+      <section class="intro">
+        <div class="intro-box">
+          <h3>As a designer with a background in the customer-facing industry, I embrace a people-oriented mindset and deeply aware of the importance of being empathetic. My goal is to offer engaging and friendly design to users.</h3>
+          <div class="intro-link">
+            <a class="link">Learn more about me <i id="intro-arrow" class="fas fa-caret-right"></i></a>
+          </div>
         </div>
-        <div class="UI-Design">
-          <h4>UI & Visual Design</h4>
+      </section>
+
+      <!--Process Section-->
+      <section class="process">
+        <div class="process-ux">
+          <h3 class="title">UX Design Process</h3>
+          <p>I begin my design projects by defining and scoping the presented problem, get to know my users though interview and survey, then strategically map out solutions through series of user flows, wireframes and prototypes. I test the usability of my designs to ensure a delightful user experience.</p>
+          <img src="images/homepage/lofi-wireframe.png" alt="Hand-drawn wireframe">
+        </div>
+        <div class="process-ui">
+          <h3 class="title">UI & Visual Design</h3>
           <p>Simplicity and quality are my design focus. I create a brand identity that shapes the user interface of each of my products. Through finding the right color palette, typography and tone of voice, I turn any low-fidelity UX wireframes into beautiful and intuitive prototypes.</p>
-          <img src="images/homepage/hifi-wireframe.png" alt="Hi-Fi wireframe" height="402" width="431">
+          <img src="images/homepage/hifi-wireframe.png" alt="Hi-Fi wireframe">
         </div>
-    </section>
-    </main>
-    <footer>
-      <div class="message-box">
-        <h2>Thank you for dropping by!<br/>
-            I hope you enjoyed your visit.
-        </h2>
-        <h4>Seeing something you like? Let's connect and chat more!</h4>
-        <ul class="call-to-action">
-          <li>
-            <a href="mailto:sharonchoi62@gmail.com">Get in touch</a>
-          </li>
-          <li>
-            <a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Download resume</a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer">
-        <p><i class="far fa-copyright"></i>2018 Sharon Choi  |  Designed and Developed by Sharon Choi</p>
-        <ul class="social-media">
-          <li>
-            <a href="https://www.linkedin.com/in/sharonchoisf/">
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/sharonchoi62">
-              <i class="fab fa-github-square"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/sharonchoi62/">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li>
-            <a href = "mailto:sharonchoi.design@gmail.com">
-              <i class="far fa-envelope"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+      </section>
+
+      <!--Footer Section-->
+      <footer class="footer">
+        <div class="message-box">
+          <h2>Thank you for dropping by!<br/>
+              I hope you enjoyed your visit.
+          </h2>
+          <h3>Seeing something you like?<span id="new-line">Let's connect and chat more!</span></h3>
+          <div class="call-to-action">
+            <div class="button" id="contact">
+              <a href="mailto:sharonchoi62@gmail.com">Get in touch</a>
+            </div>
+            <div class="button" id="resume">
+              <a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Download resume</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-box">
+          <ul class="social-media">
+            <li>
+              <a href="https://www.linkedin.com/in/sharonchoisf/">
+                <i class="fab fa-linkedin" style="color:#FFF"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/sharonchoi62">
+                <i class="fab fa-github-square" style="color:#FFF"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/sharonchoi62/">
+                <i class="fab fa-instagram" style="color:#FFF"></i>
+              </a>
+            </li>
+            <li>
+              <a href = "mailto:sharonchoi.design@gmail.com">
+                <i class="far fa-envelope" style="color:#FFF"></i>
+              </a>
+            </li>
+          </ul>
+          <p><i class="far fa-copyright"></i> 2018 Sharon Choi  |  Designed and Developed by Sharon Choi</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
