--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="container">
@@ -25,18 +24,18 @@
 
       <!-- javascript for menu icon -->
       <script>
-      function openNav() {
-          document.getElementById("myNav").style.display = "block";
-      }
-      function closeNav() {
-          document.getElementById("myNav").style.display = "none";
-      }
+        function openNav() {
+            document.getElementById("myNav").style.display = "block";
+        }
+        function closeNav() {
+            document.getElementById("myNav").style.display = "none";
+        }
       </script>
 
       <!-- Navbar Section-->
       <nav class="navbar">
         <ul class="topnav" id="myTopnav">
-          <li class="logo"><a href="index.html"><img src="images/homepage/final-logo-sc.svg" alt="Sharon-logo"></a></li>
+          <li class="logo"><a href="index.html"><img src="images/homepage/logo-sharon-black.svg" alt="Sharon-logo"></a></li>
           <li class="nav"><a href="#project-section">Work</a></li>
           <li class="nav"><a href="#">Resume</a></li>
           <li class="nav"><a href="#">About</a></li>
@@ -47,8 +46,8 @@
 
       <!--Hero Section-->
       <section class="hero">
-        <h1>Hi! I'm <span id="name">Sharon Choi,</span></h1>
-        <h2>a UX/UI designer based in the San Francisco Bay Area</h2>
+        <h1>Hi! I'm <span class="new-line">Sharon Choi,</span></h1>
+        <h2>a UX / UI designer based in the San Francisco Bay Area</h2>
         <h3>I create <span class="green-text">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
       </section>
 
@@ -63,7 +62,7 @@
             <div class="project-bkg-image"></div>
             <div class="project-info">
               <h2>Seamhub</h2>
-              <p class="subtitle">Responsive Web Design  |<br>  UX & UI Design  |  Brand Identity</p>
+              <pre class="label">Responsive Web Design  |<span class="new-line">  UX & UI Design  |  Brand Identity</span></pre>
                 <div class="button" id="btn-case-study">
                   <a href="project.html">View case study</a>
                 </div>
@@ -78,7 +77,7 @@
         <div class="intro-box">
           <h3>As a designer with a background in the customer-facing industry, I embrace a people-oriented mindset and deeply aware of the importance of being empathetic. My goal is to offer engaging and friendly design to users.</h3>
           <div class="intro-link">
-            <a class="link">Learn more about me <i id="intro-arrow" class="fas fa-caret-right"></i></a>
+            <a class="link">Learn more about me <i class="fas fa-caret-right"></i></a>
           </div>
         </div>
       </section>
@@ -103,7 +102,7 @@
           <h2>Thank you for dropping by!<br/>
               I hope you enjoyed your visit.
           </h2>
-          <h3>Seeing something you like?<span id="new-line">Let's connect and chat more!</span></h3>
+          <h3>Seeing something you like?<span class="new-line"> Let's connect and chat more!</span></h3>
           <div class="call-to-action">
             <div class="button" id="contact">
               <a href="mailto:sharonchoi62@gmail.com">Get in touch</a>
