1st submission for responsive portfolio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/hover-min.css" media="all">
   </head>
   <body>
     <div class="container homepage">
@@ -16,8 +17,8 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <div class="overlay-content">
             <a href="#project-section" onclick="closeNav()">Work</a>
-            <a href="#" onclick="closeNav()">Resume</a>
-            <a href="#" onclick="closeNav()">About</a>
+            <a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" onclick="closeNav()" target="_blank">Resume</a>
+            <a href="about.html" onclick="closeNav()">About</a>
             <a href="mailto:sharonchoi.design@gmail.com" onclick="closeNav()">Contact</a>
           </div>
         </div>
@@ -37,9 +38,9 @@
           <li class="logo"><a href="index.html"><img src="images/homepage/logo-sharon-black.svg" alt="Sharon-logo"></a></li>
           <div class ="nav">
             <li class="nav-item"><a href="#project-section">Work</a></li>
-            <li class="nav-item"><a href="#">Resume</a></li>
-            <li class="nav-item"><a href="#">About</a></li>
-            <li class="nav-item button" id="contact-btn"><a href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
+            <li class="nav-item"><a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Resume</a></li>
+            <li class="nav-item"><a href="about.html">About</a></li>
+            <li class="nav-item"><a class="button" id="btn-contact" href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
           </div>
           <li class="menu"><span style="font-size:3.6rem;cursor:pointer" onclick="openNav()"><i class="fas fa-bars"></i></span></li>
         </ul>
@@ -54,61 +55,59 @@
 
       <!--Project Section-->
       <section class="project">
-        <div class="project-cta">
-          <a class="link" id="project-cta-text" href="#project-section">See featured project<object id="project-cta-icon" type="image/svg+xml" data="images/homepage/dot-arrow.svg"></object></a>
+
+        <div class="project-pointer">
+          <a class="link hvr-icon-down" id="pointer-text" href="#project-section">See featured project<img class="hvr-icon" id="pointer-icon" src="images/homepage/dot-arrow.svg"></a>
         </div>
-        <div class="project-section">
-          <img class="project-screen full-width-img" src="images/homepage/seamhub-display.png" alt=display>
-          <div class="project-display">
-            <div class="project-bkg-img full-width-img"></div>
-            <div class="project-info">
-              <h2>Seamhub</h2>
-              <pre class="label">Responsive Web Design  |<span class="new-line">  UX & UI Design  |  Brand Identity</span></pre>
-                <div class="button" id="btn-case-study">
-                  <a href="project.html">View case study</a>
-                </div>
-              <p class="label-text">Seamhub allows users to manage their digital assets in both a personal and professional setting seamlessly.</p>
+
+        <div id="project-section">
+          <div class="project-section-mobile mobile-size">
+            <img class="project-screen full-width-img" src="images/homepage/seamhub-display.png" alt=display>
+            <div class="project-display">
+              <div class="project-bkg-img full-width-img"></div>
+              <div class="project-info">
+                <h2>Seamhub</h2>
+                <pre class="label">Responsive Web Design  |<span class="new-line">  UX & UI Design  |  Brand Identity</span></pre>
+                <a class="button" id="btn-case-study" href="project.html">View case study</a>
+                <p class="label-text">Seamhub allows users to manage their digital assets in both a personal and professional setting seamlessly.</p>
+              </div>
+            </div>
+          </div>
+          <div class="project-section-desktop desktop-size full-width-img">
+            <img class="project-screen-wbkg" src="images/homepage/seamhub-display-wbkg2.png" alt=display>
+            <div class="project-display">
+              <div class="project-info-hover">
+                <h2>Seamhub</h2>
+                <pre class="label">Responsive Web Design  |<span class="new-line">  UX & UI Design  |  Brand Identity</span></pre>
+                <a class="button" id="btn-case-study" href="project.html">View case study</a>
+                <p class="label-text">Seamhub allows users to manage their digital assets in both a personal and professional setting seamlessly.</p>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="project-section-desktop desktop-size full-width-img">
-
-          <img class="project-screen-wbkg" src="images/homepage/seamhub-display-wbkg.png" alt=display>
-
-          <div class="project-display">
-            <div class="project-info">
-              <h2>Seamhub</h2>
-              <pre class="label">Responsive Web Design  |<span class="new-line">  UX & UI Design  |  Brand Identity</span></pre>
-                <div class="button" id="btn-case-study">
-                  <a href="project.html">View case study</a>
-                </div>
-              <p class="label-text">Seamhub allows users to manage their digital assets in both a personal and professional setting seamlessly.</p>
-            </div>
-          </div>
-        </div>
       </section>
 
       <!--Intro Section-->
-      <section class="intro full-width-img">
-        <div class="grey-box">
-            <div class="intro-text">
-              <h3>As a designer with a background in the customer-facing industry, I embrace a people-oriented mindset and deeply aware of the importance of being empathetic. My goal is to offer engaging and friendly design to users.</h3>
-              <a class="link" href="#">Learn more about me <i class="fas fa-caret-right"></i></a>
-            </div>
+      <section class="intro full-width-img grey-box">
+        <div class="intro-text">
+          <h4>As a designer with a background in the customer-facing industry, I embrace a people-oriented mindset and deeply aware of the importance of being empathetic. My goal is to offer engaging and friendly design to users.</h4>
+          <div class="hover-link">
+            <a class="link hvr-icon-wobble-horizontal" href="about.html">Learn more about me <i class="fas fa-caret-right hvr-icon"></i></a>
+          </div>
         </div>
       </section>
 
       <!--Process Section-->
       <section class="process">
         <div class="process-ux ux-text">
-          <h5>UX Design Process</h5>
+          <h4>UX Design Process</h4>
           <p>I begin my design projects by defining and scoping the presented problem, get to know my users though interview and survey, then strategically map out solutions through series of user flows, wireframes and prototypes. I test the usability of my designs to ensure a delightful user experience.</p>
         </div>
         <img class="ux-image" src="images/homepage/lofi-wireframe.png" alt="Hand-drawn wireframe">
 
         <div class="process-ui ui-text">
-          <h5>UI & Visual Design</h5>
+          <h4>UI & Visual Design</h4>
           <p>Simplicity and quality are my design focus. I create a brand identity that shapes the user interface of each of my products. Through finding the right color palette, typography and tone of voice, I turn any low-fidelity UX wireframes into beautiful and intuitive prototypes.</p>
         </div>
         <img class="ui-image" src="images/homepage/hifi-wireframe.png" alt="Hi-Fi wireframe">
@@ -122,12 +121,8 @@
           </h2>
           <h3>Seeing something you like?<span class="new-line"> Let's connect and chat more!</span></h3>
           <div class="message-btn">
-            <div class="button" id="contact">
-              <a href="mailto:sharonchoi62@gmail.com">Get in touch</a>
-            </div>
-            <div class="button" id="resume">
-              <a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Download resume</a>
-            </div>
+            <a class="button hvr-round-corners" id="btn-in-touch" href="mailto:sharonchoi62@gmail.com">Get in touch</a>
+            <a class="button hvr-round-corners" id="btn-resume" href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Download resume</a>
           </div>
         </div>
         <div class="footer-box full-width-img">
