working on sticky navbar

--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
         <ul class="topnav" id="myTopnav">
           <li class="logo"><a href="index.html"><img src="images/homepage/logo-sharon-black.svg" alt="Sharon-logo"></a></li>
           <div class ="nav">
-            <li class="nav-item"><a href="#project-section">Work</a></li>
+            <li class="nav-item"><a href="index.html#project-section">Work</a></li>
             <li class="nav-item"><a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Resume</a></li>
             <li class="nav-item"><a href="about.html">About</a></li>
-            <li class="nav-item"><a class="button" id="btn-contact" href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
+            <li class="nav-item"><a class="button hvr-round-corners" id="btn-contact" href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
           </div>
           <li class="menu"><span style="font-size:3.6rem;cursor:pointer" onclick="openNav()"><i class="fas fa-bars"></i></span></li>
         </ul>
@@ -56,7 +56,7 @@
       </header>
 
       <section class="about-main">
-        <h3 class="title" id="less-margin">Along the way</h3>
+        <h3 class="title">Along the way</h3>
         <p>Growing up as a quiet kid, I loved to listen and observe. At my young age, I showed traits of being passionate about design. I was so fascinated when my dad, who is an architect and interior designer, presented me with a stack of color samples and gave me the authority to pick a color palette for my bedroom.
 
           <br/></br>Studying hospitality management in Switzerland, and my eye-opening journey of working with people from different cultures was a turning point in life. There I developed interpersonal skills and a problem-solving mindset. “Treat others the way you would like to be treated” summarizes what I learned from my hotel career. I trusted that being empathetic, willing to listen and paying attention to details were the golden rules of creating an above-and-beyond experience for guests. This philosophy has stuck with me and shaped the way I work in UX Design. </p>
