--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/hover-min.css" media="all">
+    <link rel="stylesheet" href="animate.min.css">
   </head>
   <body>
     <div class="container homepage">
@@ -40,7 +41,7 @@
             <li class="nav-item"><a href="#project-section">Work</a></li>
             <li class="nav-item"><a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Resume</a></li>
             <li class="nav-item"><a href="about.html">About</a></li>
-            <li class="nav-item"><a class="button" id="btn-contact" href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
+            <li class="nav-item"><a class="button hvr-round-corners" id="btn-contact" href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
           </div>
           <li class="menu"><span style="font-size:3.6rem;cursor:pointer" onclick="openNav()"><i class="fas fa-bars"></i></span></li>
         </ul>
@@ -48,16 +49,16 @@
 
       <!--Hero Section-->
       <section class="hero">
-        <h1>Hi! I'm <span class="new-line">Sharon Choi,</span></h1>
+        <h1 class="animated fadeInDown slower">Hi! I'm <span class="new-line">Sharon Choi,</span></h1>
         <h2>a UX / UI designer based in the San Francisco Bay Area</h2>
-        <h3>I create <span class="green-text">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
+        <h3>I create <span class="green-text type">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
       </section>
 
       <!--Project Section-->
       <section class="project">
 
         <div class="project-pointer">
-          <a class="link hvr-icon-down" id="pointer-text" href="#project-section">See featured project<img class="hvr-icon" id="pointer-icon" src="images/homepage/dot-arrow.svg"></a>
+          <a class="link hvr-icon-down animated pulse infinite slow" id="pointer-text" href="#project-section">See featured project<img class="hvr-icon" id="pointer-icon" src="images/homepage/dot-arrow.svg"></a>
         </div>
 
         <div id="project-section">
@@ -74,7 +75,7 @@
             </div>
           </div>
           <div class="project-section-desktop desktop-size full-width-img">
-            <img class="project-screen-wbkg" src="images/homepage/seamhub-display-wbkg2.png" alt=display>
+            <img class="project-screen-wbkg" src="images/homepage/seamhub-display-wbkg.png" alt=display>
             <div class="project-display">
               <div class="project-info-hover">
                 <h2>Seamhub</h2>
@@ -85,7 +86,6 @@
             </div>
           </div>
         </div>
-
       </section>
 
       <!--Intro Section-->
