--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/hover-min.css" media="all">
-    <link rel="stylesheet" href="animate.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
   </head>
   <body>
     <div class="container homepage">
@@ -49,16 +49,16 @@
 
       <!--Hero Section-->
       <section class="hero">
-        <h1 class="animated fadeInDown slower">Hi! I'm <span class="new-line">Sharon Choi,</span></h1>
-        <h2>a UX / UI designer based in the San Francisco Bay Area</h2>
-        <h3>I create <span class="green-text type">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
+          <h1 class="animated fadeInDown slower">Hi! I'm <span class="new-line">Sharon Choi,</span></h1>
+          <h2 class="animated fadeInDown slower ">a UX / UI designer based in the San Francisco Bay Area</h2>
+          <h3 class=>I create <span class="green-text type">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
       </section>
 
       <!--Project Section-->
       <section class="project">
 
         <div class="project-pointer">
-          <a class="link hvr-icon-down animated pulse infinite slow" id="pointer-text" href="#project-section">See featured project<img class="hvr-icon" id="pointer-icon" src="images/homepage/dot-arrow.svg"></a>
+          <a class="link" id="pointer-text" href="#project-section">See featured project<img class="animated rotateIn slow delay-2s" id="pointer-icon" class="hvr-icon" src="images/homepage/dot-arrow.svg"></a>
         </div>
 
         <div id="project-section">
