--- a/project.html
+++ b/project.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/hover-min.css" media="all">
-    <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="smooth-scroll.polyfills.min.js"></script>
-
+    <script type="text/javascript" src="js/smooth-scroll.polyfills.js"></script>
   </head>
   <body>
     <div class="container project">
@@ -71,7 +69,7 @@
         </section>
 
         <!-- ### Section Menu ### -->
-        <section class="section-menu desktop-size full-width-img">
+        <section id="section-menu" class="desktop-size full-width-img">
           <ul id="section-nav">
             <li><a href="#overview">Overview</a></li>
             <li><a href="#discovery">Discovery & </br> Strategy</a></li>
@@ -85,7 +83,9 @@
         <div class="case-study-content">
 
           <!--  ### Overview ### -->
+
           <section id="overview">
+            <div id="placeholder"></div>
             <h3 class="heading">Overview</h3>
             <div class="content">
               <h5 class="title content-title">Summary</h5>
@@ -145,6 +145,7 @@
 
           <!-- ### Discovery & Strategy ### -->
           <section id="discovery">
+            <div id="placeholder"></div>
             <h3 class="heading">Discovery & <div class="new-line">Strategy</h3>
 
             <!-- User Research -->
@@ -268,6 +269,7 @@
 
           <!-- ### Information Architecture ### -->
           <section id="info-arch">
+            <div id="placeholder"></div>
             <h3 class="heading">Information<div class="new-line"> Architecture</div></h3>
 
             <!-- User Flow -->
@@ -331,6 +333,7 @@
 
           <!-- ### Branding ### -->
           <section id="branding">
+            <div id="placeholder"></div>
             <h3 class="heading">Branding</h3>
             <img src="images/projects/seamhub/moodboard.png" alt="moodboard" class="moodboard">
             <div class="seamhub-def full-width-img">
@@ -444,6 +447,7 @@
 
           <!-- ### Interaction & Visual Design ### -->
           <section id="visual">
+            <div id="placeholder"></div>
             <h3 class="heading">Interaction & <span class="new-line">Visual Design</span></h3>
             <img class="visual-display mobile-size" src="images/projects/seamhub/hi-fi-display-mobile.png" alt="High-fidelity prototype">
             <img class="visual-display desktop-size" src="images/projects/seamhub/hi-fi-display.png" alt="High-fidelity prototype">
@@ -555,27 +559,28 @@
 
           <!-- ### Summary ### -->
           <section id="summary">
-              <h3 class="heading">Summary</h3>
-              <div class="sum-statement full-width-img">
-                <h5>For the fact that this was the very first time I take charge of a UX Design project, the learning curve has been steep, yet incredible. From start to finish, I took total control of the discovery, strategy, information architecture, branding, visual design, and the examination process.</h5>
+            <div id="placeholder"></div>
+            <h3 class="heading">Summary</h3>
+            <div class="sum-statement full-width-img">
+              <h5>For the fact that this was the very first time I take charge of a UX Design project, the learning curve has been steep, yet incredible. From start to finish, I took total control of the discovery, strategy, information architecture, branding, visual design, and the examination process.</h5>
+            </div>
+            <div>
+            <div class="content">
+              <h5 class="title content-title">What I have<span class="new-line-desktop"> learned</span></h5>
+              <div class="title-text">
+                <h2 class="sub-title">User research is crucial</h2>
+                <p class="add-margin">I was amazed by how user research has impacted the direction of the project. With the project starting off with lots of unanswered questions, it got into shape as I moved along the process of surveying users, understanding the competitors, identifying MVPs, creating brand identity, wireframing, prototyping, and more importantly user testings. The project would have gone for an entirely different route if I didn’t engage with the users.</p>
+                <h2 class="sub-title">What I like ≠ What users like</h2>
+                <p>There were so many instances from which my anticipations were not the same as my users, not to mention that the solution I crafted may not be the best fit to user’s needs. This principle becomes more perceptible to me as I tested out my design with users.</p>
               </div>
-              <div>
-              <div class="content">
-                <h5 class="title content-title">What I have<span class="new-line-desktop"> learned</span></h5>
-                <div class="title-text">
-                  <h2 class="sub-title">User research is crucial</h2>
-                  <p class="add-margin">I was amazed by how user research has impacted the direction of the project. With the project starting off with lots of unanswered questions, it got into shape as I moved along the process of surveying users, understanding the competitors, identifying MVPs, creating brand identity, wireframing, prototyping, and more importantly user testings. The project would have gone for an entirely different route if I didn’t engage with the users.</p>
-                  <h2 class="sub-title">What I like ≠ What users like</h2>
-                  <p>There were so many instances from which my anticipations were not the same as my users, not to mention that the solution I crafted may not be the best fit to user’s needs. This principle becomes more perceptible to me as I tested out my design with users.</p>
-                </div>
+            </div>
+            <div class="content">
+              <h5 class="title content-title">What I could <span class="new-line-desktop"> do better</span></h5>
+              <div class='title-text'>
+                <h2 class="sub-title">Test early test often</h2>
+                <p class="last-p">If I had more time and resources, I would have conducted more extensive testings during the phase of wireframing to fix all the structural and layout problems at an earlier stage.  Not only I would have a stronger foundation for my design decision, but also I could focus more on the visual and interactive aspects during my later tests.  </br></br>While I have accomplished the MVPs of this project, if I continued to build out the identified collaboration features, as well as any discovery identified along the way, there would be tremendous opportunities for this project to shine.</p>
               </div>
-              <div class="content">
-                <h5 class="title content-title">What I could <span class="new-line-desktop"> do better</span></h5>
-                <div class='title-text'>
-                  <h2 class="sub-title">Test early test often</h2>
-                  <p class="last-p">If I had more time and resources, I would have conducted more extensive testings during the phase of wireframing to fix all the structural and layout problems at an earlier stage.  Not only I would have a stronger foundation for my design decision, but also I could focus more on the visual and interactive aspects during my later tests.  </br></br>While I have accomplished the MVPs of this project, if I continued to build out the identified collaboration features, as well as any discovery identified along the way, there would be tremendous opportunities for this project to shine.</p>
-                </div>
-              </div>
+            </div>
             </section>
 
           <!--Footer Section-->
@@ -618,8 +623,9 @@
             </script>
           </footer>
 
-      </div>
+        </div>
       </main>
     </div>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
