--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'UA-123798088-1');
     </script>
-    
+
     <meta charset="utf-8">
     <title>Sharon Choi | UX UI Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/hover-min.css" media="all">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Nunito">
   </head>
   <body>
     <div class="container about">
