--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/hover-min.css" media="all">
     <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Nunito">
+
   </head>
   <body>
     <div class="container homepage">
@@ -60,7 +62,7 @@
       <!--Hero Section-->
       <section class="hero">
           <h1 class="animated fadeInDown slower">Hi! I'm <span class="new-line">Sharon Choi,</span></h1>
-          <h2 class="animated fadeInDown slower ">a UX / UI designer based in the San Francisco Bay Area</h2>
+          <h2 class="animated fadeInDown slower">a UX / UI designer based in the San Francisco Bay Area</h2>
           <h3 class=>I create <span class="green-text type">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
       </section>
 
