fixed images and updated nav bar

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section class="hero">
           <h1 class="animated fadeInDown slower">Hi! I'm <span class="new-line">Sharon Choi,</span></h1>
           <h2 class="animated fadeInDown slower">a UX / UI designer based in the San Francisco Bay Area</h2>
-          <h3 class=>I create <span class="green-text type">delightful user experience</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
+          <h3 class=>I create <span class="green-text type">delightful user experiences</span> through <span class="green-text">beautiful</span>, <span class="green-text">simple</span>, yet <span class="green-text">thoughtful</span> interface designs.</h3>
       </section>
 
       <!--Project Section-->
