fixed errors after assessment

--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/hover-min.css" media="all">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Nunito">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,500|Nunito:400,600,700,800" rel="stylesheet">
     <script type="text/javascript" src="js/smooth-scroll.polyfills.js"></script>
   </head>
   <body>
@@ -92,8 +92,8 @@
         </section>
 
         <div class="case-study-content">
-          <!--  ### Overview ### -->
 
+          <!--  ### Overview ### -->
           <section id="overview">
             <h3 class="heading">Overview</h3>
             <div class="content">
@@ -268,7 +268,7 @@
                   <img id="pinterest" src="images/projects/seamhub/logo-pinterest.png" alt="Pinterest">
                   <img id="icloud" src="images/projects/seamhub/logo-icloud.png" alt="iCloud">
                 </div>
-                <p>Given the cloud storage service market has been established for almost a decade, there are multitudinous brands entered the market, some leading platforms, like Google Drive, icloud, Dropbox, Evernote and Pinterest, are dominating and taking up the most market shares, along with smaller businesses, like SugarSync, Carbonite and Mozy, that are evolving. While these platforms possess unique value and shortfall, I focused my analysis on two cloud-storage-based applications, Dropbox and iCloud, as well as a content capture and organization oriented application, Pinterest, in order to penetrate a broader range of business setting.</br></br>Through SWOT analysis and a closer examination to the established user flows of these competitors, I was able to leverage the value-added features and growth opportunities into my design, while sidestepping those problems that composed user’s frustrations.</p>
+                <p>Given the cloud storage service market has been established for almost a decade, there are multitudinous brands entered the market, some leading platforms, like Google Drive, iCloud, Dropbox, Evernote and Pinterest, are dominating and taking up the most market shares, along with smaller businesses, like SugarSync, Carbonite and Mozy, that are evolving. While these platforms possess unique value and shortfall, I focused my analysis on two cloud-storage-based applications, Dropbox and iCloud, as well as a content capture and organization oriented application, Pinterest, in order to penetrate a broader range of business setting.</br></br>Through SWOT analysis and a closer examination to the established user flows of these competitors, I was able to leverage the value-added features and growth opportunities into my design, while sidestepping those problems that composed user’s frustrations.</p>
                 <div class="hover-link">
                   <a class="link hvr-icon-wobble-horizontal" href="https://docs.google.com/document/d/1BFPhlcQtxaIdAHmPk4AoTHd1ef7c2Ph66Lk8DQWQOAU/edit?usp=sharing" target="_blank">Checkout detailed SWOT analysis <i class="fas fa-caret-right hvr-icon"></i></a>
                 </div>
@@ -312,20 +312,20 @@
                 Once I settled in the direction, I brought my rough drafts to Balsamiq, where I developed my low-fidelity prototypes, and subsequently to Sketch and InVision, where I created a clickable prototype for user testing.</p>
               </div>
             </div>
+            <div class="lo-fi-img mobile-size">
+              <img src="images/projects/seamhub/lo-fi-prototypes-mobile.png" alt="Low-Fidelity Prototype">
+            </div>
             <div class="lo-fi-bkg full-width-img">
-              <div class="lo-fi-img mobile-size full-width-img">
-                <img src="images/projects/seamhub/lo-fi-prototypes-mobile.png" alt="Low-Fidelity Prototype">
-              </div>
-              <div class="lo-fi-img-desktop desktop-size full-width-img">
+              <div class="lo-fi-img-desktop desktop-size">
                 <img src="images/projects/seamhub/lo-fi-prototypes.png" alt="Low-Fidelity Prototype">
               </div>
               <div class="content">
+                <div class="content-title"></div>
                 <div class="content-text lo-fi-link hover-link">
                   <a class="link hvr-icon-wobble-horizontal" href="https://drive.google.com/drive/folders/1eH3X95lz38JD2KgxsQhIy73NwRpEW1yz?usp=sharing" target="_blank">View all low-fidelity prototype <i class="fas fa-caret-right hvr-icon"></i></a>
                 </div>
               </div>
             </div>
-
 
             <!-- User Testing 1st round -->
             <div class="content user-test">
