--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/hover-min.css" media="all">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Nunito">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,500|Nunito:400,600,700,800" rel="stylesheet">
   </head>
   <body>
     <div class="container about">
