--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/hover-min.css" media="all">
     <link rel="stylesheet" href="css/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,500|Nunito:400,600,700,800" rel="stylesheet">
+    <script type="text/javascript" src="js/smooth-scroll.polyfills.js"></script>
   </head>
   <body>
     <div class="container homepage">
@@ -29,9 +30,9 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <div class="overlay-content">
             <a href="#project-section" onclick="closeNav()">Work</a>
-            <a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" onclick="closeNav()" target="_blank">Resume</a>
+            <a href="https://drive.google.com/open?id=1JVftan6UGcqITIxECOoYbgoGydu2iyc3" onclick="closeNav()" target="_blank">Resume</a>
             <a href="about.html" onclick="closeNav()">About</a>
-            <a href="mailto:sharonchoi.design@gmail.com" onclick="closeNav()">Contact</a>
+            <a href="mailto:sharontchoi@gmail.com" onclick="closeNav()">Contact</a>
           </div>
         </div>
 
@@ -132,8 +133,8 @@
           </h2>
           <h3>Seeing something you like?<span class="new-line"> Let's connect and chat more!</span></h3>
           <div class="message-btn">
-            <a class="button hvr-round-corners" id="btn-in-touch" href="mailto:sharonchoi62@gmail.com">Get in touch</a>
-            <a class="button hvr-round-corners" id="btn-resume" href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Download resume</a>
+            <a class="button hvr-round-corners" id="btn-in-touch" href="mailto:sharontchoi@gmail.com">Get in touch</a>
+            <a class="button hvr-round-corners" id="btn-resume" href="https://drive.google.com/open?id=1JVftan6UGcqITIxECOoYbgoGydu2iyc3" target="_blank">Download resume</a>
           </div>
         </div>
         <div class="footer-box full-width-img">
@@ -154,13 +155,16 @@
               </a>
             </li>
             <li>
-              <a href = "mailto:sharonchoi.design@gmail.com">
+              <a href = "mailto:sharontchoi@gmail.com">
                 <i class="far fa-envelope" style="color:#FFF"></i>
               </a>
             </li>
           </ul>
           <p><i class="far fa-copyright"></i> 2018 Sharon Choi  |  Designed and Developed by Sharon Choi</p>
         </div>
+        <script>
+          var scroll = new SmoothScroll('a[href*="#"]');
+        </script>
       </footer>
     </div>
   </body>
