--- a/project.html
+++ b/project.html
@@ -30,9 +30,9 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
           <a href="index.html#project-section" onclick="closeNav()">Work</a>
-          <a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" onclick="closeNav()" target="_blank">Resume</a>
+          <a href="https://drive.google.com/open?id=1JVftan6UGcqITIxECOoYbgoGydu2iyc3" onclick="closeNav()" target="_blank">Resume</a>
           <a href="about.html" onclick="closeNav()">About</a>
-          <a href="mailto:sharonchoi.design@gmail.com" onclick="closeNav()">Contact</a>
+          <a href="mailto:sharontchoi@gmail.com" onclick="closeNav()">Contact</a>
         </div>
       </div>
 
@@ -593,8 +593,8 @@
               <h2 class>Let's work together!</h2>
               <h3>Got a project in mind? Feel free to contact me. <span class="new-line-desktop">I am excited to collaborate with you and create something even better.</span></h3>
               <div class="message-btn">
-                <a class="button hvr-round-corners" id="btn-in-touch" href="mailto:sharonchoi62@gmail.com">Get in touch</a>
-                <a class="button hvr-round-corners" id="btn-resume" href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Download resume</a>
+                <a class="button hvr-round-corners" id="btn-in-touch" href="mailto:sharontchoi@gmail.com">Get in touch</a>
+                <a class="button hvr-round-corners" id="btn-resume" href="https://drive.google.com/open?id=1JVftan6UGcqITIxECOoYbgoGydu2iyc3" target="_blank">Download resume</a>
               </div>
             </div>
             <div class="footer-box full-width-img">
@@ -615,7 +615,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href = "mailto:sharonchoi.design@gmail.com">
+                  <a href = "mailto:sharontchoi@gmail.com">
                     <i class="far fa-envelope" style="color:#FFF"></i>
                   </a>
                 </li>
