update navbar links

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <li class="logo"><a href="index.html"><img src="images/homepage/logo-sharon-black.svg" alt="Sharon-logo"></a></li>
           <div class ="nav">
             <li class="nav-item"><a href="#project-section">Work</a></li>
-            <li class="nav-item"><a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" target="_blank">Resume</a></li>
+            <li class="nav-item"><a href="https://drive.google.com/open?id=1JVftan6UGcqITIxECOoYbgoGydu2iyc3" target="_blank">Resume</a></li>
             <li class="nav-item"><a href="about.html">About</a></li>
-            <li class="nav-item"><a class="button hvr-round-corners" id="btn-contact" href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
+            <li class="nav-item"><a class="button hvr-round-corners" id="btn-contact" href="mailto:sharontchoi@gmail.com">Contact</a></li>
           </div>
           <li class="menu"><span style="font-size:3.6rem;cursor:pointer" onclick="openNav()"><i class="fas fa-bars"></i></span></li>
         </ul>
