--- a/project.html
+++ b/project.html
@@ -52,9 +52,9 @@
           <li class="logo"><a href="index.html"><img src="images/projects/seamhub/logo-sharon-white.svg" alt="Sharon-logo"></a></li>
           <div class ="nav">
             <li class="nav-item" id="nav-white"><a href="index.html#project-section">Work</a></li>
-            <li class="nav-item" id="nav-white"><a href="https://drive.google.com/open?id=1TP7An6IBV-fRwJndlWIOmCeNpcoib5XT" onclick="closeNav()" target="_blank">Resume</a></li>
+            <li class="nav-item" id="nav-white"><a href="https://drive.google.com/open?id=1JVftan6UGcqITIxECOoYbgoGydu2iyc3" onclick="closeNav()" target="_blank">Resume</a></li>
             <li class="nav-item" id="nav-white"><a href="about.html">About</a></li>
-            <li class="nav-item"><a class="button hvr-round-corners" id="btn-contact-white" href="mailto:sharonchoi.design@gmail.com">Contact</a></li>
+            <li class="nav-item"><a class="button hvr-round-corners" id="btn-contact-white" href="mailto:sharontchoi@gmail.com">Contact</a></li>
           </div>
           <li class="menu" id="white"><span style="font-size:3.6rem;cursor:pointer;" onclick="openNav()"><i class="fas fa-bars" style="color: white"></i></span></li>
         </ul>
